fix sort, more signals, better groups

--- a/virtual-signals2/mod/locale/en/auto_gen_signals.cfg
+++ b/virtual-signals2/mod/locale/en/auto_gen_signals.cfg
@@ -7,10 +7,19 @@ signal-vs2-in=Signal IN
 signal-vs2-out=Signal OUT
 signal-vs2-size=Signal Size
 signal-vs2-buffer=Signal Buffer
+signal-vs2-cur=Signal Current
 signal-vs2-limit=Signal Limit
 signal-vs2-capacity=Signal Capacity
 signal-vs2-nil=Signal Nil
 signal-vs2-fuck=Signal Fuck
+signal-vs2-new=Signal New
+signal-vs2-old=Signal Old
+signal-vs2-ok=Signal OK
+signal-vs2-check=Signal Check
+signal-vs2-stop=Signal Stop
+signal-vs2-low=Signal Low
+signal-vs2-high=Signal High
+signal-vs2-full=Signal Full
 signal-vs2-size_small=Signal Small
 signal-vs2-size_medium=Signal Medium
 signal-vs2-size_large=Signal Large
@@ -32,16 +41,6 @@ signal-vs2-var_w=Signal W
 signal-vs2-color_r=Signal R
 signal-vs2-color_g=Signal G
 signal-vs2-color_b=Signal B
-signal-vs2-led1=Signal L1
-signal-vs2-led2=Signal L2
-signal-vs2-led3=Signal L3
-signal-vs2-led4=Signal L4
-signal-vs2-led5=Signal L5
-signal-vs2-led6=Signal L6
-signal-vs2-led7=Signal L7
-signal-vs2-led8=Signal L8
-signal-vs2-led9=Signal L9
-signal-vs2-led0=Signal L0
 signal-vs2-eq=Signal Equal
 signal-vs2-neq=Signal Not Equal
 signal-vs2-aeq=Signal Approximate Equal
@@ -53,6 +52,8 @@ signal-vs2-plus=Signal Plus
 signal-vs2-minus=Signal Minus
 signal-vs2-plus_minus=Signal Plus-Minus
 signal-vs2-percent=Signal Percent
+signal-vs2-percent_per_millie=Signal Per-millie
+signal-vs2-one_percent=Signal Percent
 signal-vs2-geo_angle=Signal Angle
 signal-vs2-geo_perpendicular=Signal Perpendicular
 signal-vs2-geo_parallel=Signal Parallel
@@ -88,6 +89,12 @@ signal-vs2-phi=Signal Phi
 signal-vs2-chi=Signal Chi
 signal-vs2-psi=Signal Psi
 signal-vs2-omega=Signal Omega
+signal-vs2-stack=Signal Stack
+signal-vs2-load=Signal Load
+signal-vs2-unload=Signal Unload
+signal-vs2-train=Signal Train
+signal-vs2-ship=Signal Ship
+signal-vs2-rocket=Signal Rocket
 signal-vs2-bell_on=Signal Bell On
 signal-vs2-bell_off=Signal Bell Off
 signal-vs2-question=Signal Question
@@ -110,6 +117,7 @@ signal-vs2-satellite2=Signal Satellite 2
 signal-vs2-micro=Signal Microchip
 signal-vs2-env_bolt=Signal Bolt
 signal-vs2-env_fire=Signal Fire
+signal-vs2-env_cold=Signal Cold
 signal-vs2-env_sun=Signal Sun
 signal-vs2-env_water=Signal Water
 signal-vs2-env_leaf=Signal Leaf
@@ -119,3 +127,25 @@ signal-vs2-env_atom=Signal Atom
 signal-vs2-env_solar=Signal Solar
 signal-vs2-env_tree=Signal Tree
 signal-vs2-science=Signal Science
+signal-vs2-biters=Signal Biters
+signal-vs2-wrigglers=Signal Wrigglers
+signal-vs2-led1=Signal L1
+signal-vs2-led2=Signal L2
+signal-vs2-led3=Signal L3
+signal-vs2-led4=Signal L4
+signal-vs2-led5=Signal L5
+signal-vs2-led6=Signal L6
+signal-vs2-led7=Signal L7
+signal-vs2-led8=Signal L8
+signal-vs2-led9=Signal L9
+signal-vs2-reg0=Signal R0
+signal-vs2-reg1=Signal R1
+signal-vs2-reg2=Signal R2
+signal-vs2-reg3=Signal R3
+signal-vs2-reg4=Signal R4
+signal-vs2-reg5=Signal R5
+signal-vs2-reg6=Signal R6
+signal-vs2-reg7=Signal R7
+signal-vs2-reg8=Signal R8
+signal-vs2-reg9=Signal R9
+signal-vs2-reg0=Signal R0
