--- a/virtual-signals2/mod/locale/en/auto_gen_signals.cfg
+++ b/virtual-signals2/mod/locale/en/auto_gen_signals.cfg
@@ -129,6 +129,7 @@ signal-vs2-env_tree=Signal Tree
 signal-vs2-science=Signal Science
 signal-vs2-biters=Signal Biters
 signal-vs2-wrigglers=Signal Wrigglers
+signal-vs2-led0=Signal L0
 signal-vs2-led1=Signal L1
 signal-vs2-led2=Signal L2
 signal-vs2-led3=Signal L3
@@ -148,4 +149,3 @@ signal-vs2-reg6=Signal R6
 signal-vs2-reg7=Signal R7
 signal-vs2-reg8=Signal R8
 signal-vs2-reg9=Signal R9
-signal-vs2-reg0=Signal R0
