csv table, more signals, locales

--- a/virtual-signals2/mod/locale/en/auto_gen_signals.cfg
+++ b/virtual-signals2/mod/locale/en/auto_gen_signals.cfg
@@ -5,21 +5,30 @@ signal-vs2-min=Signal MIN
 signal-vs2-max=Signal MAX
 signal-vs2-in=Signal IN
 signal-vs2-out=Signal OUT
+signal-vs2-yes=Signal YES
+signal-vs2-no=Signal NO
 signal-vs2-size=Signal Size
 signal-vs2-buffer=Signal Buffer
 signal-vs2-cur=Signal Current
+signal-vs2-sum=Signal Sum
 signal-vs2-limit=Signal Limit
 signal-vs2-capacity=Signal Capacity
 signal-vs2-nil=Signal Nil
-signal-vs2-fuck=Signal Fuck
 signal-vs2-new=Signal New
 signal-vs2-old=Signal Old
-signal-vs2-ok=Signal OK
-signal-vs2-check=Signal Check
-signal-vs2-stop=Signal Stop
 signal-vs2-low=Signal Low
 signal-vs2-high=Signal High
 signal-vs2-full=Signal Full
+signal-vs2-request=Signal Request
+signal-vs2-response=Signal Response
+signal-vs2-fuck=Signal Fuck
+signal-vs2-ok=Signal OK
+signal-vs2-check=Signal Check
+signal-vs2-stop=Signal Stop
+signal-vs2-positive=Signal Positive
+signal-vs2-negative=Signal Negative
+signal-vs2-lock=Signal Lock
+signal-vs2-unlock=Signal Unlock
 signal-vs2-size_small=Signal Small
 signal-vs2-size_medium=Signal Medium
 signal-vs2-size_large=Signal Large
@@ -53,12 +62,12 @@ signal-vs2-minus=Signal Minus
 signal-vs2-plus_minus=Signal Plus-Minus
 signal-vs2-percent=Signal Percent
 signal-vs2-percent_per_millie=Signal Per-millie
-signal-vs2-one_percent=Signal Percent
+signal-vs2-one_percent=Signal One percent
 signal-vs2-geo_angle=Signal Angle
 signal-vs2-geo_perpendicular=Signal Perpendicular
 signal-vs2-geo_parallel=Signal Parallel
 signal-vs2-geo_similar=Signal Similar
-signal-vs2-algo_lemni=Signal INF
+signal-vs2-algo_lemni=Signal Infinity
 signal-vs2-algo_func=Signal Function
 signal-vs2-algo_delta=Signal Delta
 signal-vs2-algo_sigma=Signal Sigma
@@ -90,6 +99,7 @@ signal-vs2-chi=Signal Chi
 signal-vs2-psi=Signal Psi
 signal-vs2-omega=Signal Omega
 signal-vs2-stack=Signal Stack
+signal-vs2-gear=Signal Gear
 signal-vs2-load=Signal Load
 signal-vs2-unload=Signal Unload
 signal-vs2-train=Signal Train
@@ -100,7 +110,7 @@ signal-vs2-bell_off=Signal Bell Off
 signal-vs2-question=Signal Question
 signal-vs2-exclamation=Signal Exclamation
 signal-vs2-plug=Signal Plug
-signal-vs2-puzzle=Signal Puzzle
+signal-vs2-puzzle=Signal Component
 signal-vs2-left=Signal Left
 signal-vs2-right=Signal Right
 signal-vs2-up=Signal Up
@@ -110,13 +120,13 @@ signal-vs2-power_exc=Signal Power Warning
 signal-vs2-power_ok=Signal Power OK
 signal-vs2-power_bolt=Signal Power Bolt
 signal-vs2-wireless=Signal Wireless
-signal-vs2-signal=Signal Some Signal
+signal-vs2-signal=Signal Network Signal
 signal-vs2-broadcast=Signal Broadcast
 signal-vs2-satellite=Signal Satellite
 signal-vs2-satellite2=Signal Satellite 2
 signal-vs2-micro=Signal Microchip
 signal-vs2-env_bolt=Signal Bolt
-signal-vs2-env_fire=Signal Fire
+signal-vs2-env_fire=Signal Hot
 signal-vs2-env_cold=Signal Cold
 signal-vs2-env_sun=Signal Sun
 signal-vs2-env_water=Signal Water
