--- a/virtual-signals2/mod/locale/en/auto_gen_signals.cfg
+++ b/virtual-signals2/mod/locale/en/auto_gen_signals.cfg
@@ -7,6 +7,8 @@ signal-vs2-in=Signal IN
 signal-vs2-out=Signal OUT
 signal-vs2-yes=Signal YES
 signal-vs2-no=Signal NO
+signal-vs2-tick=Signal Tick
+signal-vs2-cloak=Signal Clock
 signal-vs2-size=Signal Size
 signal-vs2-buffer=Signal Buffer
 signal-vs2-cur=Signal Current
@@ -21,6 +23,8 @@ signal-vs2-high=Signal High
 signal-vs2-full=Signal Full
 signal-vs2-request=Signal Request
 signal-vs2-response=Signal Response
+signal-vs2-second=Signal Second
+signal-vs2-minute=Signal Minute
 signal-vs2-fuck=Signal Fuck
 signal-vs2-ok=Signal OK
 signal-vs2-check=Signal Check
@@ -42,7 +46,6 @@ signal-vs2-alert=Signal Alert
 signal-vs2-trigger=Signal Trigger
 signal-vs2-if=Signal IF
 signal-vs2-else=Signal ELSE
-signal-vs2-action=Signal ACT
 signal-vs2-var_x=Signal X
 signal-vs2-var_y=Signal Y
 signal-vs2-var_z=Signal Z
@@ -50,6 +53,7 @@ signal-vs2-var_w=Signal W
 signal-vs2-color_r=Signal R
 signal-vs2-color_g=Signal G
 signal-vs2-color_b=Signal B
+signal-vs2-action=Signal ACT
 signal-vs2-eq=Signal Equal
 signal-vs2-neq=Signal Not Equal
 signal-vs2-aeq=Signal Approximate Equal
