--- a/virtual-signals2/mod/locale/ru/auto_gen_signals.cfg
+++ b/virtual-signals2/mod/locale/ru/auto_gen_signals.cfg
@@ -7,12 +7,14 @@ signal-vs2-in=Сигнал ВХОД
 signal-vs2-out=Сигнал ВЫХОД
 signal-vs2-yes=Сигнал ДА
 signal-vs2-no=Сигнал НЕТ
+signal-vs2-tick=Сигнал Тик
+signal-vs2-cloak=Сигнал Время
 signal-vs2-size=Сигнал Размер
 signal-vs2-buffer=Сигнал Буфер
-signal-vs2-cur=Сигнал Текущее значение
+signal-vs2-cur=Сигнал Текущее
 signal-vs2-sum=Сигнал Сумма
 signal-vs2-limit=Сигнал Лимит
-signal-vs2-capacity=Сигнал Объем
+signal-vs2-capacity=Сигнал Объём
 signal-vs2-nil=Сигнал Пусто
 signal-vs2-new=Сигнал Новый
 signal-vs2-old=Сигнал Старый
@@ -21,6 +23,8 @@ signal-vs2-high=Сигнал Высокий
 signal-vs2-full=Сигнал Полный
 signal-vs2-request=Сигнал Запрос
 signal-vs2-response=Сигнал Ответ
+signal-vs2-second=Сигнал Секунда
+signal-vs2-minute=Сигнал Минута
 signal-vs2-fuck=Сигнал Бля
 signal-vs2-ok=Сигнал OK
 signal-vs2-check=Сигнал Проверка
@@ -42,7 +46,6 @@ signal-vs2-alert=Сигнал Тревога
 signal-vs2-trigger=Сигнал Триггер
 signal-vs2-if=Сигнал Если
 signal-vs2-else=Сигнал Иначе
-signal-vs2-action=Сигнал Действие
 signal-vs2-var_x=Сигнал X
 signal-vs2-var_y=Сигнал Y
 signal-vs2-var_z=Сигнал Z
@@ -50,6 +53,7 @@ signal-vs2-var_w=Сигнал W
 signal-vs2-color_r=Сигнал R
 signal-vs2-color_g=Сигнал G
 signal-vs2-color_b=Сигнал B
+signal-vs2-action=Сигнал Действие
 signal-vs2-eq=Сигнал Равно
 signal-vs2-neq=Сигнал Не равно
 signal-vs2-aeq=Сигнал Примерно равно
@@ -64,14 +68,14 @@ signal-vs2-percent=Сигнал Процент
 signal-vs2-percent_per_millie=Сигнал Сотый процент
 signal-vs2-one_percent=Сигнал Один процент
 signal-vs2-geo_angle=Сигнал Угол
-signal-vs2-geo_perpendicular=Сигнал Перпендикуляр
+signal-vs2-geo_perpendicular=Сигнал Перпендикулярно
 signal-vs2-geo_parallel=Сигнал Параллельно
 signal-vs2-geo_similar=Сигнал Похожий
 signal-vs2-algo_lemni=Сигнал Бесконечно
 signal-vs2-algo_func=Сигнал Функция
 signal-vs2-algo_delta=Сигнал Разница
 signal-vs2-algo_sigma=Сигнал Сигма
-signal-vs2-algo_golden=Сигнал Золотое
+signal-vs2-algo_golden=Сигнал Золотой
 signal-vs2-algo_pi=Сигнал Пи
 signal-vs2-algo_integral=Сигнал Интеграл
 signal-vs2-alpha=Сигнал Alpha
@@ -98,13 +102,13 @@ signal-vs2-phi=Сигнал Phi
 signal-vs2-chi=Сигнал Chi
 signal-vs2-psi=Сигнал Psi
 signal-vs2-omega=Сигнал Omega
-signal-vs2-stack=Сигнал Стак
+signal-vs2-stack=Сигнал Стек
 signal-vs2-gear=Сигнал Шестерня
 signal-vs2-load=Сигнал Загрузка
 signal-vs2-unload=Сигнал Выгрузка
 signal-vs2-train=Сигнал Поезд
 signal-vs2-ship=Сигнал Корабль
-signal-vs2-rocket=Сигнал Рокета
+signal-vs2-rocket=Сигнал Ракета
 signal-vs2-bell_on=Сигнал Колокол ВКЛ
 signal-vs2-bell_off=Сигнал Колокол ВЫКЛ
 signal-vs2-question=Сигнал Вопрос
@@ -121,7 +125,7 @@ signal-vs2-power_ok=Сигнал Питание OK
 signal-vs2-power_bolt=Сигнал Питание Молния
 signal-vs2-wireless=Сигнал Беспроводной
 signal-vs2-signal=Сигнал Сетевой сигнал
-signal-vs2-broadcast=Сигнал Радио передача
+signal-vs2-broadcast=Сигнал Широковещание
 signal-vs2-satellite=Сигнал Спутник
 signal-vs2-satellite2=Сигнал Спутник 2
 signal-vs2-micro=Сигнал Микрочип
